objects/Pablo__c.object
<CustomObject>
    <fields>
        <fullName>Alfredo_picklist__c</fullName>
        <label>Alfredo picklist</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Kindergarden__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Head</fullName>
                    <default>true</default>
                    <label>Head</label>
                </value>
                <value>
                    <fullName>Shoulder</fullName>
                </value>
                <value>
                    <fullName>Knees</fullName>
                </value>
                <value>
                    <fullName>Toes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Encriptado__c</fullName>
        <label>Encriptado</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Kindergarden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kindergarden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mama_opinion__c</fullName>
        <label>Mama opinion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monday_afternoon__c</fullName>
        <label>Monday afternoon</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mozilla__c</fullName>
        <label>Mozilla</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pablo</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Esto no funciona</errorMessage>
            <filterItems>
                <field>$Source.OwnerId</field>
                <operation>notEqual</operation>
                <value>456</value>
            </filterItems>
            <filterItems>
                <field>$User.City</field>
                <operation>equals</operation>
                <value>San Francisco USA</value>
            </filterItems>
            <filterItems>
                <field>$Source.CreatedDate</field>
                <operation>notEqual</operation>
                <valueField>$Profile.CreatedDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pablo__c</referenceTo>
        <relationshipLabel>Pablos</relationshipLabel>
        <relationshipName>Pablos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PB_multipicklist__c</fullName>
        <label>PB multipicklist</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sony</fullName>
                    <default>true</default>
                    <label>Sony</label>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Motorola</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Pocophone</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                    <isActive>false</isActive>
                    <label>Samsung</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Papa_Opinion__c</fullName>
        <label>Papa Opinion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Andrew_Raymond_3__c</fullName>
        <description>fjlbhflñasñ</description>
        <label>Test Andrew Raymond 3</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_back_promotion_2__c</fullName>
        <label>Test back promotion 2</label>
        <length>135</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_back_promotion_3__c</fullName>
        <label>Test back promotion 3</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_back_promotion_4__c</fullName>
        <label>Test back promotion 4</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_back_promotion__c</fullName>
        <description>fdgadgafgafgbaga</description>
        <label>Test back promotion</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alfredotest2__c</fullName>
        <label>alfredotest2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aniversario__c</fullName>
        <label>aniversario</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>main_email__c</fullName>
        <label>main email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>recommit2__c</fullName>
        <label>recommit2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recommit__c</fullName>
        <label>recommit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pablo</label>
    <nameField>
        <label>Pablo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pablos</pluralLabel>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account</fullName>
        <active>true</active>
        <label>Person Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account_2</fullName>
        <active>true</active>
        <label>Person Account 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account_Default</fullName>
        <active>true</active>
        <label>Person Account Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>